# MySnake

./: .gitignore  CMakeLists.txt  maincpp  mainh  vcpkg-configuration.json  vcpkg.json
include/: Controller.h  Menu.h  Model.h  View.h  snake.h
include/impl/: ControllerImpl.h  ModelImpl.h  ViewImpl.h
include/interfaces/: IController.h  IModel.h  IView.h
src/: Controller.cpp  Model.cpp  View.cpp  main.cpp  menu.cpp  snake.cpp
src/impl/: ControllerImpl.cpp  ModelImpl.cpp  ViewImpl.cpp
